app/styles/_list.scss
/** 
* @see https://github.com/passwordcockpit/frontend for the canonical source repository 
* @copyright Copyright (c) 2018 Blackpoints AG (https://www.blackpoints.ch) 
* @license https://github.com/passwordcockpit/frontend/blob/master/LICENSE.md BSD 3-Clause License 
*/

/* CONTENT
***********************************************************************************
***********************************************************************************
- folder permissions
- folder toggle
- media
***********************************************************************************/

.password-menu ul .fa {
    width: 1em;
}

ul.list {
    padding: 0;
    margin: 0;
    list-style: none;
    > li:first-child {
        border-top: 0;
    }
    ul {
        list-style: none;
        padding-left: 15px;
    }

    li {
        border-top: 1px solid $border-color;
        position: relative;

        &:last-child {
            border-bottom: 0;
        }

        .edit {
            padding: 6px 166px 6px $padding;
            display: none;
            position: relative;

            form {
                height: 100%;
            }

            input.form-control {
                padding: 2px 5px;
                font-size: 14px;
                height: 22px;
            }

            .form-btn {
                padding: 6px $padding;
                position: absolute;
                top: 0;
                right: 0;
            }
        }

        &.edit-view {
            > .read {
                display: none;
            }

            > .edit {
                display: block;
            }

            > .actions {
                display: none;
            }
        }
    }
    div.read,
    a:not(.btn){
        height: 35px;
        width: 100%;
        padding: 5px 97px 5px $padding;
        display: block;
        line-height: 25px;
        color: #000;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;

        &.active,
        &:hover {
            background: #eee;
            text-decoration: none;
        }
        &.active{
            .fa-folder{
                display: none;
            }
        }
        &:not(.active){
            .fa-folder-open{
                display: none;
            }
        }
        &:hover {
            color: $brand-primary;
        }

        &.match {
            background: $brand-primary;
            color: #fff;

            &:hover {
                background: darken($brand-primary, 5%);
            }
        }
    }
    span.read {
        height: 35px;
        width: 100%;
        padding: 5px 70px 5px $padding;
        display: block;
        line-height: 25px;
        color: #777;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
        cursor: not-allowed;
    }
    
    .actions {
        height: 35px;
        padding: 6px $padding;
        position: absolute;
        top: 0;
        right: 0;
        line-height: 30px;

        a {
            width: auto;
            margin-left: 5px;
            float: left;

            &.action-add,
            &.action-delete,
            &.action-edit,
            &.action-close {
                display: none;
            }
        }

        &.open {
            background: $brand-primary;
            left: 0;

            a.open-actions {
                display: none;
            }

            a.action-add,
            a.action-delete,
            a.action-edit {
                display: block;
                margin-right: 5px;
            }

            a.action-close {
                display: block;
                float: right;
            }
        }
    }
}

.scroll-container {
    background: #fff;
    p.alert {
        margin: 15px;
    }
}

.dropdown-menu {
    margin: 0;
    padding: 0;
    border-radius: 0;
    border: 1px solid #e5e5e5;

    .divider {
        margin: 0;
    }
}

/* folder permissions */
.folder-permissions{
    ul.list{
        .edit{
            position: relative;
            padding-right: 330px;
        }
    }
    .user-edit-container{
        position: absolute;
        width: 150px;
        top: 7px;
        right: 170px;
    }    
}

.user-select-container {
    width: 100%;
    display: inline-block;
}
.edit-view{
    .user-select-container{
        line-height: 2.2rem;
    }
}
.user-edit-container {
    padding: 3px 0 0;
    vertical-align: top;
    display: inline-block;
    font-weight: normal;

    input[type=checkbox] {
        vertical-align: top;
        margin: 3px 5px 0;
    }
}

.power-select-container {
    vertical-align: bottom;
}
/* folder toggle */
.folder-menu{
    .chevron{
        position: absolute;
        top: 0;
        left: 0;
        height: 35px;
        width: 25px;
        text-align: center;
        background: transparent;
        padding: 0;
        border: 0;
    }
    ul.list{
        li{
            a.read{
                padding-left: 25px;
            }
        }
    }
}

